tests/ast_interpreter/len.expected
2
<string>:3:11: error: len expects 1 argument
    print(len());
          ^^^
